intermidate-devops-projects/project-18-service-mesh/k8s/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops-starter
  name: devops-app-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-app
      version: v2
  template:
    metadata:
      labels:
        app: devops-app
        version: v2
    spec:
      containers:
        - name: app
          image: devops-starter:v2
          ports:
            - containerPort: 8000
