intermidate-devops-projects/project-18-service-mesh/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devops-starter
  name: devops-app
spec:
  selector:
    app: devops-app
  ports:
    - port: 80
      targetPort: 8000
