intermidate-devops-projects/project-18-service-mesh/k8s/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  namespace: devops-starter
  name: devops-app
spec:
  host: devops-app
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 30s
      baseEjectionTime: 30s
